--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="papers text-center">
               <img src="img/team/1.jpg" alt="">
               <br/>
-              <a href="./img/Jordan_Gary_ProductManager.pdf" target= "_blank">
+              <a href="./img/Jordan_Gary_ProductManager.pdf" target="_blank">
                 <b>Download my resume</b>
               </a>
               <h4 class="">Jordan Ian Gary</h4>
@@ -114,11 +114,10 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Skills</h2>
-          <h3>I don't know who you are. I don't know what you want. If you're looking for ransom, I can tell you I don't have
-            money... but what I do have are a very particular set of skills. Skills I have acquired over a very long career.
-            Skills that make me a nightmare for people like you. If you let my daughter go now, that will be the end of it
-            - I will not look for you, I will not pursue you... but if you don't, I will look for you, I will find you...
-            and I will kill you. </h3>
+          <h3>I don't know who you are. I don't know what you want... but what I do have are a very particular set of skills.
+            Skills I have acquired over a very long career. Skills that make me an excellent candidate for people like you.
+            If you leave my site now, that will be the end of it - I will not look for you, I will not pursue you...
+            but if you contact me, I will get back to you, I will work for you ... and I will make your business better. </h3>
         </div>
       </div>
 
@@ -181,7 +180,7 @@
             <div class="skills">
               <h3 class="main text-center">WEB DEVELOPMENT</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/network3.jpg)">
+                <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>HTML</h5>
                 <p>Developed a number of HTML5 websites throughout the course of the Northwestern Full Stack Web Development
@@ -189,7 +188,7 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/network2.jpg)">
+                <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>CSS</h5>
                 <p>Designed stylistic and easy to use sites using CSS3 and along with annimation elements and media queries
@@ -197,7 +196,7 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/matrix2.jpg)">
+                <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>JAVASCRIPT</h5>
                 <p>Extensive work with the jQuery library as well as AJAX and JSON objects throughout a series of deployments.
@@ -246,7 +245,7 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/matrix2.jpg)">
+                <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>CLIENT RELATIONS</h5>
                 <p>From answering clients in a timely mannger, to a preffered method of communication, to working determine
@@ -254,7 +253,7 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/network3.jpg)">
+                <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>MARKETING</h5>
                 <p>Having been a publish in the digital age has provided me an insight into how to capture the attention of
@@ -283,7 +282,7 @@
             <ul class="grid">
               <li class="grid-sizer"></li>
               <!-- for Masonry column width -->
-              <li>
+              <a href="https://friendfinder-jig.herokuapp.com/" target="_blank"><li>
                 <figure>
                   <img src="img/work/1.jpg" alt="" />
                   <figcaption>
@@ -291,8 +290,8 @@
                     <p>An app in which a user answers 10 questions and is matched with their best possible friend</p>
                   </figcaption>
                 </figure>
-              </li>
-              <li>
+              </li></a>
+              <a href="https://kmatchu.github.io/Trip-tips-Project-1/" target="_blank"><li>
                 <figure>
                   <img src="img/work/2.jpg" alt="" />
                   <figcaption>
@@ -300,8 +299,8 @@
                     <p>A website that allows a user to pick a destination and data from numerous APIs provides local information.</p>
                   </figcaption>
                 </figure>
-              </li>
-              <li>
+              </li></a>
+              <a href="https://jigsays.github.io/Crystals-the-Game/" target="_blank"><li>
                 <figure>
                   <img src="img/work/3.jpg" alt="" />
                   <figcaption>
@@ -309,7 +308,7 @@
                     <p>Web game in which the user picks crystals of varying values to match a random score. </p>
                   </figcaption>
                 </figure>
-              </li>
+              </li></a>
               <li>
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
@@ -437,7 +436,7 @@
               <h4>DePaul University, College of Computing & Digital Media</h4>
               <h5>Master of Computer Science</h5>
               <h5>2016 - 2019</h5>
-              <img height= 150px src="./img/work/DePaul-CDM.png" />
+              <img height=1 50px src="./img/work/DePaul-CDM.png" />
               <!-- <i class="fa fa-laptop"></i> -->
               <p>Focused on the complete life-cycle of computer application development including abstraction, modeling and
                 algorithm development, leveraging computer systems, programming languages and development frameworks, and
@@ -452,7 +451,7 @@
               <h4>Northwestern University, School of Professional Studies </h4>
               <h5>Full Stack Web Development Certificate</h5>
               <h5>Jan 2018 - April 2018</h5>
-              <img height= 150px src="./img/work/Northwestern.png" />
+              <img height=1 50px src="./img/work/Northwestern.png" />
               <!-- <i class="fa fa-book"></i> -->
               <p>An intensive Bootcamp dedicated to designing and building web applications. Skills learned included HTML5,
                 CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, Bookshelf.js, MongoDB,
@@ -467,7 +466,7 @@
               <h4>Fordham University, Gabelli School of Business</h4>
               <h5>Bachelor of Sciences, Management Systems</h5>
               <h5>2001 - 2004</h5>
-              <img height= 150px src="./img/work/Fordham.png" />
+              <img height=1 50px src="./img/work/Fordham.png" />
               <!-- <i class="fa fa-gear"></i> -->
               <p>Studied management systems with a focus on logistics and operations paired with a solid Jesuit Education. Interned
                 at both Loew's Cineplex and NYC & Company. Restaurant reviewer for 'The Ram' and member of the Novice Men's
@@ -536,16 +535,16 @@
                 <li>
                   <i class="fa fa-home fa-2x"></i> Chicago, IL</li>
                 <li>
-                  <i class="fa fa-phone fa-2x"></i> +1 (212) 879-6480</li>
-                <li>
                   <i class="fa fa-envelope fa-2x"></i> JigSays@gmail.com</li>
                 <li>
-                  <a href="./img/Jordan_Gary_ProductManager.pdf" target= "_blank"><i class="fa fa-download fa-2x"></i> Download My Resume</li></a>
+                  <a href="./img/Jordan_Gary_ProductManager.pdf" target="_blank">
+                    <i class="fa fa-download fa-2x"></i> Download My Resume</li>
+                </a>
               </ul>
             </div>
           </div>
         </div>
-     
+
     </section>
 
     <!--footer-->
