adds screen shots for projects

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <!-- for Masonry column width -->
               <a href="https://friendfinder-jig.herokuapp.com/" target="_blank"><li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
+                  <img src="img/work/1.png" height= 200px alt="" />
                   <figcaption>
                     <h3>FriendFinder</h3>
                     <p>An app in which a user answers 10 questions and is matched with their best possible friend</p>
@@ -293,7 +293,7 @@
               </li></a>
               <a href="https://kmatchu.github.io/Trip-tips-Project-1/" target="_blank"><li>
                 <figure>
-                  <img src="img/work/2.jpg" alt="" />
+                  <img src="img/work/2.png" height= 200px alt="" />
                   <figcaption>
                     <h3>CJ's Travels</h3>
                     <p>A website that allows a user to pick a destination and data from numerous APIs provides local information.</p>
@@ -302,7 +302,7 @@
               </li></a>
               <a href="https://jigsays.github.io/Crystals-the-Game/" target="_blank"><li>
                 <figure>
-                  <img src="img/work/3.jpg" alt="" />
+                  <img src="img/work/3.png" height= 200px alt="" />
                   <figcaption>
                     <h3>Crystals the Game</h3>
                     <p>Web game in which the user picks crystals of varying values to match a random score. </p>
@@ -311,7 +311,7 @@
               </li></a>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src="img/work/8.jpg" height= 200px alt="" />
                   <figcaption>
                     <h3>Project 2</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -320,7 +320,7 @@
               </li>
               <li>
                 <figure>
-                  <img src="img/work/5.jpg" alt="" />
+                  <img src="img/work/5.jpg" height= 200px alt="" />
                   <figcaption>
                     <h3>Project 3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
