--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <div class="container">
         <div class="heading text-center">
           <h2>About Me</h2>
-          <h3>My background includes work in Hospitality, Real Estate, and Publishing, in the for-profit and not-for-profit worlds,
-            and at each stop along my journey, I have acquired a unique understanding of the marketplace. Recently, I've
-            focused on helping startups get off the ground and on their way to success. </h3>
+          <h3>My background includes work in hospitality, real estate, and publishing, in the for-profit and not-for-profit world.
+            Through these experiences, I have learned how to navigate unique market places and have used those skills to
+            get new projects off the ground. I look forward to doing the same for your new venture. </h3>
         </div>
         <div class="row">
           <div class="col-md-offset-3 col-md-6">
@@ -96,13 +96,13 @@
               <img src="img/team/1.jpg" alt="">
               <br/>
               <a href="./img/Jordan_Gary_ProductManager.pdf" target="_blank">
-                <b>Download my resume</b>
+                <b>Download My Resume</b>
               </a>
               <h4 class="">Jordan Ian Gary</h4>
               <p>
-                I’m a dedicated and loyal business manager that brings years of experience as not only an employee but an entrepreneur to
-                the fold. From my years of event production, I know how to work well under pressure and meet tight deadlines.
-                I also know how to rally a team around a common goal for a successful outcome.
+                I am a dedicated and entrepreneurial business manager that brings years of experience not only as an employee but as a business
+                owner. I work well under pressure and can navigate tight deadlines. I also know how to rally a team around
+                a common goal for a successful outcome.
               </p>
             </div>
           </div>
@@ -114,10 +114,9 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Skills</h2>
-          <h3>I don't know who you are. I don't know what you want... but what I do have are a very particular set of skills.
+          <h3>I don't know who you are. I don't know what you want... but what I do have is a very particular set of skills.
             Skills I have acquired over a very long career. Skills that make me an excellent candidate for people like you.
-            If you leave my site now, that will be the end of it - I will not look for you, I will not pursue you...
-            but if you contact me, I will get back to you, I will work for you ... and I will make your business better. </h3>
+          </h3>
         </div>
       </div>
 
@@ -183,16 +182,15 @@
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>HTML</h5>
-                <p>Developed a number of HTML5 websites throughout the course of the Northwestern Full Stack Web Development
-                  Bootcamp.
+                <p>Developed HTML5 websites using clean and concise code.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>CSS</h5>
-                <p>Designed stylistic and easy to use sites using CSS3 and along with annimation elements and media queries
-                  have made them vissually appealing and mobile-friendly.
+                <p>Designed stylish and easy-to-use sites with animation elements and media queries using CSS3 with a focus
+                  on creating appealing and mobile-friendly sites..
                 </p>
               </div>
               <div class="restitem clearfix">
@@ -211,24 +209,24 @@
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>PROJECT MANAGEMENT</h5>
-                <p>Through years of event planning and operations management, I have the ability to see a project from conception
-                  to delivery.
+                <p>Over 10 years of event planning and operations management experience bringing projects from conception to
+                  deliver.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>DECISION MAKING</h5>
-                <p>Through a logical approach to problem solving and factoring in potential pitfalls, I have been able to continually
-                  develop a solid foundation for the reasoning behind tough decisions.
+                <p>Using a methodical approach to problem solving, I excel at factoring potential pitfalls in to potential solutions
+                  to reason through tough decisions.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>EFFICIENCY</h5>
-                <p>Constantly looking at problems and determining which processes can be made more efficient without a loss
-                  of quality or value.
+                <p>One of my strengths is determining which processes can be made more efficient without a loss of quality or
+                  value.
                 </p>
               </div>
             </div>
@@ -240,24 +238,24 @@
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>BUDGETING</h5>
-                <p>Whether for an event, sales department or fiscal year, creating realistic budgeting and working within thier
-                  limitations.
+                <p>Whether for an event, sales department, or fiscal year, I know how to create realistic budgeting goals and
+                  hot to manage a project within those constraints.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>CLIENT RELATIONS</h5>
-                <p>From answering clients in a timely mannger, to a preffered method of communication, to working determine
-                  what a clients needs are, even if the client is unsure, I have a decade of expirience making clients happy.
+                <p>Whether answering client inquiries in a timely manner, identifying communication methods, or assessing a
+                  client’s goals, I value being responsive to clients and building a productive client relationship.
                 </p>
               </div>
               <div class="restitem clearfix">
                 <div class="rm-thumb" style="background-image: url(img/matrix.jpg)">
                 </div>
                 <h5>MARKETING</h5>
-                <p>Having been a publish in the digital age has provided me an insight into how to capture the attention of
-                  an audience over a multitude of mediums.
+                <p>As a publisher in the digital age, I have insight into how to capture the attention of an audience over a
+                  multitude of mediums.
                 </p>
               </div>
             </div>
@@ -272,9 +270,11 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Portfolio</h2>
-          <h3>After an intensive 3-month long Bootcamp dedicated to designing and building web applications. The skills learned
-            and demonstrated included HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database
-            Theory, Bookshelf.js, MongoDB, MySQL, Command Line, Git and Python.</h3>
+          <h3>Below is a sample of my portfolio. I am currently expanding my skills though a 3-month long Northwestern University
+            Full-Stack Web Development Bootcamp dedicated to designing and building web applications, and a masters program
+            in computer science from DePaul University. The skills learned and demonstrated include HTML5, CSS3, JavaScript,
+            jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Command Line, Git and Python.
+          </h3>
         </div>
 
         <div id="grid-gallery" class="grid-gallery">
@@ -282,51 +282,60 @@
             <ul class="grid">
               <li class="grid-sizer"></li>
               <!-- for Masonry column width -->
-              <a href="https://friendfinder-jig.herokuapp.com/" target="_blank"><li>
-                <figure>
-                  <img src="img/work/1.png" height= 200px alt="" />
-                  <figcaption>
-                    <h3>FriendFinder</h3>
-                    <p>An app in which a user answers 10 questions and is matched with their best possible friend</p>
-                  </figcaption>
-                </figure>
-              </li></a>
-              <a href="https://kmatchu.github.io/Trip-tips-Project-1/" target="_blank"><li>
-                <figure>
-                  <img src="img/work/2.png" height= 200px alt="" />
-                  <figcaption>
-                    <h3>CJ's Travels</h3>
-                    <p>A website that allows a user to pick a destination and data from numerous APIs provides local information.</p>
-                  </figcaption>
-                </figure>
-              </li></a>
-              <a href="https://jigsays.github.io/Crystals-the-Game/" target="_blank"><li>
-                <figure>
-                  <img src="img/work/3.png" height= 200px alt="" />
-                  <figcaption>
-                    <h3>Crystals the Game</h3>
-                    <p>Web game in which the user picks crystals of varying values to match a random score. </p>
-                  </figcaption>
-                </figure>
-              </li></a>
+              <a href="https://friendfinder-jig.herokuapp.com/" target="_blank">
+                <li>
+                  <figure>
+                    <img src="img/work/1.png" height=200px alt="" />
+                    <figcaption>
+                      <h3>FriendFinder</h3>
+                      <p>An app in which a user answers 10 questions and is matched to their best possible friend</p>
+                    </figcaption>
+                  </figure>
+                </li>
+              </a>
+              <a href="https://kmatchu.github.io/Trip-tips-Project-1/" target="_blank">
+                <li>
+                  <figure>
+                    <img src="img/work/2.png" height=200px alt="" />
+                    <figcaption>
+                      <h3>CJ's Travels</h3>
+                      <p>A website that allows a user to pick a destination and recieve data from numerous APIs with local information.</p>
+                    </figcaption>
+                  </figure>
+                </li>
+              </a>
+              <a href="https://jigsays.github.io/Crystals-the-Game/" target="_blank">
+                <li>
+                  <figure>
+                    <img src="img/work/3.png" height=200px alt="" />
+                    <figcaption>
+                      <h3>Crystals the Game</h3>
+                      <p>Web game in which the user picks crystals of varying values to match a random score. </p>
+                    </figcaption>
+                  </figure>
+                </li>
+              </a>
+              <a href="https://loo-locator.herokuapp.com/" target="_blank">
               <li>
                 <figure>
-                  <img src="img/work/8.jpg" height= 200px alt="" />
+                  <img src="img/work/8.png" height=200px alt="" />
                   <figcaption>
-                    <h3>Project 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Loo-Locator</h3>
+                    <p>A crowd-sourced mobile application to help users find clean public restrooms no matter where they are.
+                      The site is built using jQuery, JavaScript, Express/Node, and Google Maps API. </p>
                   </figcaption>
                 </figure>
               </li>
-              <li>
+            </a>
+              <!-- <li>
                 <figure>
-                  <img src="img/work/5.jpg" height= 200px alt="" />
+                  <img src="img/work/5.jpg" height=200px alt="" />
                   <figcaption>
                     <h3>Project 3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                   </figcaption>
                 </figure>
-              </li>
+              </li> -->
               <!-- <li>
                 <figure>
                   <img src="img/work/6.jpg" alt="" />
@@ -435,8 +444,8 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>DePaul University, College of Computing & Digital Media</h4>
               <h5>Master of Computer Science</h5>
-              <h5>2016 - 2019</h5>
-              <img height=1 50px src="./img/work/DePaul-CDM.png" />
+              <h5>2016 - current</h5>
+              <img height=150px src="./img/work/DePaul-CDM.png" />
               <!-- <i class="fa fa-laptop"></i> -->
               <p>Focused on the complete life-cycle of computer application development including abstraction, modeling and
                 algorithm development, leveraging computer systems, programming languages and development frameworks, and
@@ -450,12 +459,12 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>Northwestern University, School of Professional Studies </h4>
               <h5>Full Stack Web Development Certificate</h5>
-              <h5>Jan 2018 - April 2018</h5>
-              <img height=1 50px src="./img/work/Northwestern.png" />
+              <h5>Jan. 2018 - April 2018</h5>
+              <img height=150px src="./img/work/Northwestern.png" />
               <!-- <i class="fa fa-book"></i> -->
-              <p>An intensive Bootcamp dedicated to designing and building web applications. Skills learned included HTML5,
-                CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, Bookshelf.js, MongoDB,
-                MySQL, Command Line, Git and Python.</p>
+              <p>An intensive Bootcamp dedicated to designing and building web applications. Skills learned include HTML5, CSS3,
+                JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, Bookshelf.js, MongoDB, MySQL,
+                Command Line, Git and Python.</p>
             </div>
           </div>
         </div>
@@ -466,11 +475,10 @@
               <h4>Fordham University, Gabelli School of Business</h4>
               <h5>Bachelor of Sciences, Management Systems</h5>
               <h5>2001 - 2004</h5>
-              <img height=1 50px src="./img/work/Fordham.png" />
+              <img height=150px src="./img/work/Fordham.png" />
               <!-- <i class="fa fa-gear"></i> -->
-              <p>Studied management systems with a focus on logistics and operations paired with a solid Jesuit Education. Interned
-                at both Loew's Cineplex and NYC & Company. Restaurant reviewer for 'The Ram' and member of the Novice Men's
-                Crew Team.</p>
+              <p>Studied management systems with a focus on logistics and operations paired. Interned at Loew's Cineplex and
+                NYC & Company. Restaurant reviewer for 'The Ram' and member of the Novice Men's Crew Team.</p>
             </div>
           </div>
         </div>
@@ -514,8 +522,8 @@
       <div class="container">
         <div class="heading">
           <h2>Contact</h2>
-          <h3>I'd love to hear from you...
-            <br> Whether it's an oppertunity, for advice, or if you'd like to grab a cup of coffee</h3>
+          <h3>Whether you are looking to hire, seek or give advice, or expand your network, I'd love
+            to hear from you.</h3>
         </div>
       </div>
 
@@ -530,12 +538,13 @@
           <div class="contact-info">
             <div class="col-md-5">
               <h4>My Contact Info</h4>
-              <h5>If you'd like to connect on an upcoming project, you can reach me at methods below:</h5>
+              <h5>If you'd like to connect on an upcoming project, you can reach me at any of the methods below:</h5>
               <ul>
                 <li>
                   <i class="fa fa-home fa-2x"></i> Chicago, IL</li>
+                <a href="mailto:JigSays@gmnail.com?subject=Hi%20From%20Jordan%20Gary.com">
                 <li>
-                  <i class="fa fa-envelope fa-2x"></i> JigSays@gmail.com</li>
+                  <i class="fa fa-envelope fa-2x"></i> JigSays@gmail.com</li></a>
                 <li>
                   <a href="./img/Jordan_Gary_ProductManager.pdf" target="_blank">
                     <i class="fa fa-download fa-2x"></i> Download My Resume</li>
