--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row">
           <div class="col-md-offset-3 col-md-6">
             <div class="papers text-center">
-              <img src="img/team/1.jpg" alt="">
+              <img src="img/team/gary_jordan.jpg" alt="Jordan Gary Headshot">
               <br/>
               <a href="./img/Jordan_Gary_ProductManager.pdf" target="_blank">
                 <b>Download My Resume</b>
@@ -285,7 +285,7 @@
               <a href="https://friendfinder-jig.herokuapp.com/" target="_blank">
                 <li>
                   <figure>
-                    <img src="img/work/1.png" height=200px alt="" />
+                    <img src="img/work/1.png" height=200px alt="FriendFinder App" />
                     <figcaption>
                       <h3>FriendFinder</h3>
                       <p>An app in which a user answers 10 questions and is matched to their best possible friend</p>
@@ -296,7 +296,7 @@
               <a href="https://kmatchu.github.io/Trip-tips-Project-1/" target="_blank">
                 <li>
                   <figure>
-                    <img src="img/work/2.png" height=200px alt="" />
+                    <img src="img/work/2.png" height=200px alt="CJ's Travels" />
                     <figcaption>
                       <h3>CJ's Travels</h3>
                       <p>A website that allows a user to pick a destination and recieve data from numerous APIs with local information.</p>
@@ -307,7 +307,7 @@
               <a href="https://jigsays.github.io/Crystals-the-Game/" target="_blank">
                 <li>
                   <figure>
-                    <img src="img/work/3.png" height=200px alt="" />
+                    <img src="img/work/3.png" height=200px alt="Crystals the Game" />
                     <figcaption>
                       <h3>Crystals the Game</h3>
                       <p>Web game in which the user picks crystals of varying values to match a random score. </p>
@@ -318,7 +318,7 @@
               <a href="https://loo-locator.herokuapp.com/" target="_blank">
               <li>
                 <figure>
-                  <img src="img/work/8.png" height=200px alt="" />
+                  <img src="img/work/8.png" height=200px alt="Loo-Locator" />
                   <figcaption>
                     <h3>Loo-Locator</h3>
                     <p>A crowd-sourced mobile application to help users find clean public restrooms no matter where they are.
@@ -374,22 +374,22 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
+                  <img src="img/work/1.png" height=100% alt="FriendFinder App" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/2.jpg" alt="" />
+                  <img src="img/work/2.png" height=100% alt="CJ's Travels" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/3.jpg" alt="" />
+                  <img src="img/work/3.png" height=100% alt="Crystals the Game" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src="img/work/8.png" height=100% alt="Loo-Locator" />
                 </figure>
               </li>
               <li>
